--- a/mo.css
+++ b/mo.css
@@ -5,6 +5,12 @@
     box-sizing: border-box;
     transition: all 0.3s ease;
 }
+.mi{
+width:0;
+heigh:0;
+border-radius:10px;
+    
+}
   .contenedor-img {
             max-width: 600px; /* Ancho máximo en pantallas grandes */
             margin: 0 auto;
