--- a/mo.css
+++ b/mo.css
@@ -6,6 +6,13 @@
     transition: all 0.3s ease;
 }
 
+  .categoria img {
+      width: 200px;     /* Ajusta si necesitas otro tamaño */
+      height: 200px;
+      object-fit: cover;
+      border-radius: 8px; /* Opcional */
+  }
+
     
 
   .contenedor-img {
