--- a/mirom.css
+++ b/mirom.css
@@ -34,7 +34,7 @@ body {
 
 /* HEADER */
 header {
-    background-color: #4d1113;
+    background-color:#513a6b;
     color: #F5F5F5;
     padding: 40px 20px;
     text-align: center;
@@ -221,3 +221,4 @@ footer {
     margin-top: 60px;
     font-size: 1em;
 }
+
