--- a/mo.css
+++ b/mo.css
@@ -37,7 +37,7 @@ body {
 
 /* HEADER */
 header {
-    background-color: #4d1113;
+    background-color: #513a6b;
     color: #F5F5F5;
     padding: 30px 20px;
     text-align: center;
@@ -249,3 +249,4 @@ button:hover {
 .limon {
     background-color: #1F1F1F;
 }
+
