--- a/mo.css
+++ b/mo.css
@@ -127,7 +127,8 @@ section {
 .categoria img {
     width: 90%;
     height: 450px;
-    object-fit: cover;
+    object-fit: flex;
+
     border-radius: 10px;
     margin-bottom: 15px;
 }
@@ -284,6 +285,7 @@ button:hover {
 .limon {
     background-color: #2e2e2e;
 }
+
 
 
 
